@@ -43,7 +43,10 @@ jlink {
         jdkHome = "${project.property('jdk_mac_x64')}"
         addExtraModulePath("${project.property('jfx_mac_x64')}")
     }
-    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages',
+               // needed for SSL certificates
+               '--add-modules', 'jdk.crypto.cryptoki,jdk.crypto.ec']
+
     launcher {
         name = 'lifecompanion-installer'
         args = ['-Djava.net.useSystemProxies=true']
